--- a/.github/workflows/netlify-deploy.yml
+++ b/.github/workflows/netlify-deploy.yml
@@ -16,9 +16,7 @@ jobs:
         persist-credentials: false
 
     - name: Deploy to Netlify
-      uses: owid/netlify-actions/cli@node-v16
-      with:
-        args: deploy --dir=./public/
+      run: netlify deploy --dir=./public/
       env:
         NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
